--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,6 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.4.1
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: docs # The branch the action will deploy to
-          FOLDER: out # The folder the action will deploy to
+          token: ${{ secrets.GH_TOKEN }}
+          branch: docs # The branch the action will deploy to
+          folder: out # The folder the action will deploy to
