--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
     "typescript": "4.8.4"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
